[gd_scene load_steps=56 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/banana_gun.png" type="Texture" id=3]
[ext_resource path="res://assets/22LR Single WAV.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/success.mp3" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 960, 240, 240 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 960, 240, 240 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 960, 240, 240 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 960, 240, 240 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 1440, 240, 240 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1440, 240, 240 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 1440, 240, 240 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 1440, 240, 240 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 1200, 240, 240 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1200, 240, 240 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 1200, 240, 240 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 1200, 240, 240 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 720, 240, 240 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 240, 240 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 240, 240, 240 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 480, 240, 240 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 720, 240, 240 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "attack_backward",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack_forward",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "attack_left",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "attack_right",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "celebration",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "exhaustion",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "idle_1",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "jump_backward",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "jump_forward",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "jump_left",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "jump_right",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "walk_backward",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "walk_forward",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 52, 52.5 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 54.5, 54.5 )

[node name="player" type="KinematicBody2D" groups=["player"]]
z_index = 1
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=["player"]]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 48 )
animation = "walk_forward"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2( 0, 7.5 )
shape = SubResource( 49 )
disabled = true

[node name="gun_center" type="Position2D" parent="." groups=["player"]]
scale = Vector2( 0.5, 0.5 )

[node name="gun" type="Sprite" parent="gun_center" groups=["player"]]
position = Vector2( 140, 0 )
rotation = 3.14159
scale = Vector2( 8, 8 )
z_index = -1
texture = ExtResource( 3 )
flip_h = true

[node name="Muzzle" type="Position2D" parent="gun_center/gun" groups=["player"]]
position = Vector2( -11.75, 4 )

[node name="gun_shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="aoi" type="Area2D" parent="."]
collision_mask = 3

[node name="hitbox" type="CollisionShape2D" parent="aoi"]
position = Vector2( -0.5, 7.5 )
shape = SubResource( 50 )

[node name="success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="bulletCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="aoi" to="." method="_on_aoi_body_entered"]
[connection signal="timeout" from="bulletCooldown" to="." method="_on_bulletCooldown_timeout"]
